Correction of image overlap selected

--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@
 .img_interna {
     width: 100%;
     height: 100%;
-
+    position:absolute;
 }
 
 .name_attribute {
@@ -165,6 +165,7 @@ input[type="file"] {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10000000000;
+    cursor:move;
 }
 
 .alto_2 {
@@ -172,12 +173,14 @@ input[type="file"] {
     top: 100%;
     transform: translate(-50%, -50%);
     z-index: 10000000000;
+    cursor:move;
 }
 
 .ancho_1 {
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 10000000000;
+    cursor:move;
 }
 
 .ancho_2 {
@@ -185,4 +188,11 @@ input[type="file"] {
     left: 100%;
     transform: translate(-50%, -50%);
     z-index: 10000000000;
+    cursor:move;
+}
+.imagenes_puntos{
+    background-color:red;
+    /* position:relative; */
+    /* width: 100%; */
+    /* height:100%; */
 }
